# posttraining

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
configs/: sft.example.yaml
docs/: countdown-task-diagram.md  rlvr-roadmap.md
notebooks/: rlvr_data_playground.ipynb  rlvr_run_dashboard.ipynb
src/posttraining/: __init__.py  cli.py  config.py
src/posttraining/rlvr/: __init__.py  countdown.py  countdown_cli.py  countdown_train.py
tests/: test_config.py
tests/rlvr/: test_countdown.py  test_countdown_cli.py
